adding to heroku

--- a/package.json
+++ b/package.json
@@ -1,8 +1,22 @@
 {
+  "name": "portfolio",
+  "version": "0.1.0",
+  "hompage": "https://imdawizard.github.io/react_portfolio/",
+
+
   "dependencies": {
     "create-react-app": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwindcss": "^3.3.3"
-  }
+  },
+  "devDependencies": {
+    "gh-pages": "^6.0.0"
+  },
+  "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+   "start": "react-scripts start",
+    "build": "react-scripts build"
+    }
 }
