--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "portfolio",
   "version": "0.1.0",
   "hompage": "https://imdawizard.github.io/react_portfolio/",
-
-
   "dependencies": {
     "create-react-app": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-script": "^2.0.5",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
@@ -16,7 +15,11 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-   "start": "react-scripts start",
+    "start": "react-scripts start",
     "build": "react-scripts build"
-    }
+  },
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x"
+  }
 }
