--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "hompage": "https://imdawizard.github.io/react_portfolio/",
+  "homepage": "https://imdawizard.github.io/react_portfolio/",
   "dependencies": {
     "create-react-app": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-script": "^2.0.5",
+    "react-scripts": "^4.0.3",
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
